<resources>
    <string name="app_name">Vennly</string>
    <string name="new_game">NEW GAME</string>
    <string name="join_game">JOIN GAME</string>
    <string name="start_game">START GAME</string>
    <string name="players">PLAYERS</string>
    <string name="game_mode">GAME\nMODE</string>
    <string name="game_mode_venn">VENN</string>
    <string name="game_mode_gradient">GRADIENT</string>
    <string name="game_mode_coming_soon">COMING\n SOON!</string>
    <string name="categories">CATEGORIES</string>
    <string name="no_categories">No saved categories</string>
    <string name="next">NEXT</string>
    <string name="single">SINGLE</string>
    <string name="multi">MULTI</string>
    <string name="lobby">LOBBY</string>
    <string name="game_over">GAME OVER!</string>
    <string name="here_are_your_results">HERE ARE YOUR \n\t\t\t\t\t\t\t RESULTS!</string>
    <string name="prompts">PROMPTS</string>
    <string name="saved">SAVED</string>
    <string name="custom">CUSTOM</string>
    <string name="tap_dots">TAP ON THE DOTS!</string>
    <string name="done">DONE!</string>
    <string name="category_placeholder_name">Category Name</string>
    <string name="category_placeholder_1">Category 1</string>
    <string name="category_placeholder_2">Category 2</string>
    <string name="category_placeholder_3">Category 3</string>
    <string name="hostorjoin">Host or Join</string>
    <string name="host">host</string>
    <string name="join">join</string>
    <string name="YourPromptIs">YOUR PROMPT IS:</string>
    <string name="lobby_name">Enter lobby name</string>
    <string name="player_name">Enter player name</string>
    <string name="connecting">Connecting to game\u2026</string>
    <string name="prompts_header">PROMPTS</string>
    <string name="save">SAVE</string>
    <string name="prompt_collection_name">Prompt Collection Name</string>
    <string name="custom_prompt_entry_hint">Enter prompts separated by commas</string>
    <string name="start">START</string>
    <string name="gameplay_waiting">Waiting for other players\u2026</string>
    <string name="prompt_wait">Waiting for host to choose categories and prompts\u2026</string>
</resources>