<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PromptsCustomActivity"
    android:background="@color/cardview_dark_background">

    <TextView
        android:id="@+id/promptsSavedTitle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/a_alloy_ink"
        android:text="@string/prompts_header"
        android:textColor="@color/purple_200"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp" />

    <LinearLayout
        android:id="@+id/saved_custom_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/promptsSavedTitle"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
    >
    <Button
        android:id="@+id/savedButtonPrompts"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/a_alloy_ink"
        android:text="@string/saved"
        android:textColor="#1E1818"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="15sp"
        android:autoSizeStepGranularity="2sp" />

    <Button
        android:id="@+id/customButtonPrompts"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:background="@drawable/rounded_button_purple"
        android:fontFamily="@font/a_alloy_ink"
        android:text="@string/custom"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="15sp"
        android:autoSizeStepGranularity="2sp"
        android:textColor="#1E1818" />
    </LinearLayout>

    <EditText
        android:id="@+id/textViewCollectionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saved_custom_buttons"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/prompt_collection_name"
        android:paddingStart="@dimen/category_padding_left"
        android:textColor="@color/white"
        android:textColorHint="#989898"
        android:textSize="@dimen/category_size" />

    <!-- Probably should make this scrollable or something-->
    <EditText
        android:id="@+id/textViewPromptsEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCollectionName"
        android:background="@drawable/rounded_rectangle_white"
        android:hint="@string/custom_prompt_entry_hint"
        android:paddingStart="@dimen/category_padding_left"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        android:textColorHint="#989898"
        android:textSize="18sp" />

    <Button
        android:id="@+id/saveButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/a_alloy_ink"
        android:text="@string/save"
        android:textColor="#1E1818"
        android:textSize="20sp" />

</RelativeLayout>