<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/cardview_dark_background">

    <TextView
        android:id="@+id/vennly_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/a_alloy_ink"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/new_game_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="140dp"
            android:background="@drawable/new_game_circle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/a_alloy_ink"
                android:paddingEnd="70dp"
                android:text="@string/new_game"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/join_game_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:background="@drawable/join_game_circle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingStart="70dp"
                android:text="@string/join_game"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/a_alloy_ink"/>

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>