<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".GameModeActivity">

    <TextView
        android:id="@+id/game_mode_title"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/a_alloy_ink"
        android:text="@string/game_mode"
        android:textColor="@color/purple_200"
        android:textAlignment="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp">

        <RelativeLayout
            android:id="@+id/game_mode_venn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:src="@drawable/game_mode_venn_abc"
                android:paddingBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/a_alloy_ink"
                android:paddingTop="180dp"
                android:text="@string/game_mode_venn"
                android:textColor="@color/black"
                android:textSize="25dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/game_mode_gradient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:background="@drawable/rounded_rectangle">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:src="@drawable/red_linear_image"
                android:paddingBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="180dp"
                android:text="@string/game_mode_gradient"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:fontFamily="@font/a_alloy_ink"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rectangle_grey"
                android:alpha="0.9">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="60dp"
                    android:text="@string/game_mode_coming_soon"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/a_alloy_ink"/>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>