<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriesSavedActivity"
    android:background="@color/cardview_dark_background">

    <TextView
        android:id="@+id/categories_saved_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/a_alloy_ink"
        android:text="@string/categories"
        android:textColor="@color/purple_200"
        android:textAlignment="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp" />

    <LinearLayout
        android:id="@+id/saved_custom_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/categories_saved_title"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/savedButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:background="@drawable/rounded_button_purple"
            android:fontFamily="@font/a_alloy_ink"
            android:text="@string/saved"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeStepGranularity="2sp"
            android:textColor="#1E1818" />

        <Button
            android:id="@+id/customButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/a_alloy_ink"
            android:text="@string/custom"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeStepGranularity="2sp"
            android:textColor="#1E1818" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="42dp"
        android:layout_below="@id/saved_custom_buttons"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/noCategoryText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/no_categories"
            android:fontFamily="@font/a_alloy_ink"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize= "24sp"
            android:autoSizeMaxTextSize="36sp"
            android:visibility="gone"
            />

        <ListView
            android:id="@+id/buttonList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/button_list_item"/>
    </LinearLayout>


</RelativeLayout>