<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HostOrJoinActivity"
    android:background="@color/cardview_dark_background">

    <TextView
        android:id="@+id/players_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/a_alloy_ink"
        android:text="@string/hostorjoin"
        android:textColor="@color/purple_200"
        android:textAlignment="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp" />

    <RelativeLayout
        android:id="@+id/single_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/rounded_rectangle">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_centerInParent="true"
            android:src="@drawable/crown"
            android:paddingBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/a_alloy_ink"
            android:paddingTop="200dp"
            android:text="@string/host"
            android:textColor="@color/black"
            android:textSize="25dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/join_game_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="215dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/rounded_rectangle">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_centerInParent="true"
            android:src="@drawable/join"
            android:paddingBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="200dp"
            android:text="@string/join"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:fontFamily="@font/a_alloy_ink"/>

    </RelativeLayout>

</RelativeLayout>