<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".LobbyActivity">
    <TextView
        android:id="@+id/join_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/a_alloy_ink"
        android:text="@string/host"
        android:textColor="@color/purple_200"
        android:textAlignment="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/join_title"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="10">

        <EditText
            android:layout_marginTop="100dp"
            android:id="@+id/room_name"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:hint="@string/lobby_name"
            android:text=""
            android:inputType="text"
            android:textColorHint="@color/grey"

            android:textColor="@color/black" />

        <EditText

            android:id="@+id/player_name"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:hint="@string/player_name"
            android:textColorHint="@color/grey"
            android:text=""
            android:inputType="text"

            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/room_name"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/go_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/a_alloy_ink"
            android:padding="6dp"
            android:text="Go!"
            android:onClick="buttonClickHandler"
            app:layout_constraintTop_toBottomOf="@+id/room_code"
            android:textColor="@color/black" />


    </LinearLayout>
</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>